<resources>
    <string name="app_name">TMK Keyboard</string>
    <string name="about_content">ၸုမ်းထုင်ႉမၢဝ်းၶမ်းႁဝ်းၼႆႉ လႆႈတေႇသၢင်ႈႁဵတ်းဝႆႉ မိူဝ်ႈဝၼ်းထိ 12/10/2019 ဝၼ်းဢၼ်ႁဝ်းၶႃႈ လႆႈလူင်းသႂ်ႇၽွၼ်ႉပၼ် ပီႈၼွင်ႉတႆး တီႈဝတ်ႉၵွင်းမူးလွႆ၊ တူင်ႇဝဵင်းမူႇၸေႊဢေႃႈ။ \nလွင်ႈဢဵၼ်းဢၢၼ်းၸုမ်းႁဝ်းၼႆႉတေႉ ၶႂ်ႈၸွႆႈ ပီႈၼွင်ႉတႆးႁဝ်း လၢႆႈၸႂ်ႉတိုဝ်း ယူႇၼီႇၶူတ်ႉတႆး။\nပိူင်ဢိင်ၼိူဝ် လွင်ႈတၢင်းယၢပ်ႇ ဢၼ်ႁဝ်းၶႃႈ လႆႈတူဝ်ထူပ်းၼၼ်ႉသေ ႁဝ်းၶႃႈ လႆႈႁဵတ်းသၢင်ႈဝႆႉ App ၵမ်ႈၽွင်ႈ တႃႇတေၸွႆႈထႅမ် လၢႆႈၸႂ်ႉတိုဝ်း ယူႇၼီႇၶူတ်ႉၶႃႈ။\nApp ဢၼ် ၸုမ်းႁဝ်းၶႃႈ လႆႈႁဵတ်းသၢင်ႈဝႆႉၼႆႉတေႉ\n1. Tai Unicode Converter\n2. ထုင့်မၢဝ်းၶမ်း ၶီးပွတ်ႉ(TMK Keyboard)\nပေႃးမီးလွင်ႈတၢင်းႁၼ်ထိုင်သင်၊ လွင်ႈၶႂ်ႈထၢမ်သင်သေဢမ်ႇဝႃႈ ၵပ်းသိုပ်ႇမႃးလႆႈတီႈ facebook ၸုမ်းႁဝ်းလႆႈယူႇၶႃႈ။</string>
    <string name="about_base">ငိၼ်းၸူမ်းၶွပ်ႈၸႂ်ယႂ်ႇယႂ်ႇၼမ်ၼမ် ဢၼ်လႆႈၸႂ်ႉတိုဝ်း ၶီးပွတ်ႉထုင်ႉမၢဝ်းၶမ်းယူႇၶႃႈ။</string>
    <string name="enable_keyboard_title">1. Enable Keyboard</string>
    <string name="enable_keyboard_summary">Enable TMK Keyboard in Setting</string>
    <string name="choose_keyboard_title">2. Choose Keyboard</string>
    <string name="choose_keyboard_summary">Choose TMK Keyboard in Dialog</string>
    <string name="enable_popup_converter_title">Enable Popup Converter</string>
    <string name="enable_popup_converter_summary">Copying Shan Zawgyi will show a Popup with Shan Unicode</string>
    <string name="enable_vibrate_title">Enable Key Vibration</string>
    <string name="enable_vibrate_summary">Pressing key will vibrate</string>
    <string name="enable_sound_title">Enable Key Sound</string>
    <string name="enable_sound_summary">Pressing keys will play a sound</string>
    <string name="enable_handwriting_title">Enable Handwriting System</string>
    <string name="enable_handwriting_summary">For Asai and Esai only</string>
    <string name="choose_theme_title">Choose Keyboard Theme</string>
    <string name="choose_theme_summary">To choose various keyboard themes</string>
    <string name="test_keyboard_title">Test Keyboard</string>
    <string name="test_keyboard_summary">To test keyboard</string>
    <string name="about_title">Thung Mao Kham (TMK)</string>
    <string name="thank_you">Thanks for using TMK Keyboard</string>
    <string name="tmk_group">TMK Group</string>
    <string name="change_app_language">Change App Language</string>
    <string name="enable_choose_keyboard">Please enable and choose TMK Keyboard</string>
    <string name="unicode">Unicode</string>

    <string name="word_separators" translatable="false"> ​.,;:!?\10()[]*&amp;@{}/&lt;&gt;_+=|၊။</string>
    <string name="shan_consonants" translatable="false">ၵၶငၸသၺတထၼပၽၾမယရလဝႁဢၷꧠꩡႀၻꩪꧣၿꩮ</string>
    <string name="enable_key_preview">Enable Key Preview</string>


    <string name="en_GB" translatable="false">English</string>
    <string name="mm_MM" translatable="false">မြန်မာ</string>
    <string name="shn_MM" translatable="false">လိၵ်ႈတႆး</string>
    <string name="taile_MM" translatable="false">ᥖᥭᥰ</string>
    <string name="th_TH" translatable="false">ไทย</string>
    <string name="khamti_MM" translatable="false">တဲးၵံးတီ</string>
    <string name="tham_TH" translatable="false">ᨴᩱ</string>
    <string name="tai_lue_TH" translatable="false">ᦺᦑᦟᦹᧉ</string>
    <string name="tai_dam_VN" translatable="false">ꪼꪕꪒꪾ</string>
    <string name="tai_IN" translatable="false">𑜄𑜩𑜒𑜡𑜑𑜪𑜤</string>
    <string name="choose_languages">Choose Languages</string>
    <string name="app_version" translatable="false">Version 3.0.0</string>
    <string name="activity_test_keyboard">Test Keyboard</string>
    <string name="enable_longpress_converters">Enable Longpress Converters</string>
    <string name="enable_font_converter">Enable Font Converter</string>
    <string name="enable_tai_le_converter">Enable Tai Le Converter</string>
    <string name="about_us">About TMK Group</string>
    <string name="enable_font_converter_desc">This app can help you convert Tai Unicode to Zawgyi and vice versa. If enabled, long press the ENTER key will trigger this converter.</string>
    <string name="enable_taile_converter_desc">This app can help you convert Tai to Tai Le and vice versa. If enabled, long press the 123 key will trigger this converter.</string>
    <string name="get_this_app">Get this app!</string>

    <!-- THEMES -->
    <string name="dark">Dark</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
    <string name="gold">Gold</string>
    <string name="pink">Pink</string>
    <string name="violet">Violet</string>
    <string name="scarlet">Scarlet</string>
    <string name="dracula">Dracula</string>
    <string name="tmk">Thung Mao Kham</string>

</resources>
