<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:scrollbars="none"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/tmk_group"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thank_you" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_change_app_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="@string/change_app_language"
                android:textColor="?colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:clickable="true">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cv_enable_popup_converter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:text="@string/enable_popup_converter_title"
                android:textColor="?colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:clickable="true">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cv_enable_key_vibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:text="@string/enable_vibrate_title"
                android:textColor="?colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cv_enable_key_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:text="@string/enable_sound_title"
                android:textColor="?colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_enable_handwriting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:text="@string/enable_handwriting_title"
                android:textColor="?colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_choose_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/choose_theme_title"
                android:textColor="?colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_test_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/test_keyboard_title"
                android:textColor="?colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</ScrollView>
