<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/tmk" />

        <TextView
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_marginTop="10dp"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:background="@drawable/blue_theme_keybackground"
            android:onClick="gotoTMK" />

        <TextView
            android:layout_marginTop="10dp"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_base"
            android:textColor="@color/key_danger"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</LinearLayout>